@@ -1,3 +1,11 @@
+Sun May 10 16:23:58 2015  Kazuki Tsujimoto  <kazuki@callcc.net>
+
+	* proc.c (proc_binding): fix segmentation fault on marking phase.
+	  envptr of newenvval should not be NULL.
+
+	  You can reproduce by
+	   make test-all TESTS='--gc-stress -n test_to_proc_binding ruby/test_method.rb'
+
 Sun May 10 12:41:18 2015  Masaki Matsushita <glass.saga@gmail.com>
 
 	* ext/zlib/zlib.c (rb_gzreader_external_encoding):
